--- a/Source Code/index.html
+++ b/Source Code/index.html
@@ -172,7 +172,7 @@
 
      
 <section id="footer">
-          <h2>Max<span id="yellow">Fitness</span></h2>
+          <h2>Workout<span id="yellow">World</span></h2>
      
           <p>&copy; 2022 ―  All Rights Reserved </p>
           <img src="images/icon.png">
